--- a/verkefni 5/index_1.html
+++ b/verkefni 5/index_1.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="bulma.css">
@@ -11,24 +10,35 @@
 <body>
 <header>
 <ul class="navigation">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About</a></li>
-  <li><a href="#">Products</a></li>
-  <li><a href="#">Contact</a></li>
+  <li><a href="#">Heim</a></li>
+  <li><a href="#">Upplýsingar</a></li>
+  <li><a href="#">Innskráning</a></li>
+  <li><a href="#">Skipuleggjendur</a></li>
 </ul>
 </header>
-  <ul class="flex-container">
-    <li class="flex-item">1</li>
-    <li class="flex-item">2</li>
-    <li class="flex-item">3</li>
-    <li class="flex-item">4</li>
-    <li class="flex-item">5</li>
-    <li class="flex-item">6</li>
+<div class="myndadaemi">
+<div class="titill">Jólatónleikar</div>
+<div class="minnititill">Sinfóníu Íslands</div>
+</div>
+<div class="dalkur">
+<div class="dalkur-1"><a href="#">Kaupa Miða</a></div>
+<div class="dalkur-1"><a href="#">Fleiri upplýsingar</a></div>
+</div>
+
+<article>Jólatónleikar Sinfóníu íslands eru komnir aftur fyrir jólin. Bara bestu Jólalögin verða sungin á þessum hátíðarlegu tónleikum fyrir alla fjölskyklduna.
+<div class="texti">16. Desember kl. 18:00 og 20:00</div>
+<div class="texti">17. Desember kl. 18:00 og 20:00</div>
+<div class="texti">18. Desember kl. 18:00 og 20:00</div>
+<div class="texti">19. Desember kl. 18:00 og 20:00</div>
+<div class="texti">20. Desember kl. 18:00 og 20:00</div>
+Miðar eru einungis seldir á heimasíðu Hörpu.</article>
+
+<ul class="flex-container">
+    <li class="flex-item-2">" Þetta er einn af bestu jólatónleikum landsins í dag. " EINHVER GAUR</li>
+    <li class="flex-item-2">" Frábær stemming fyrir fjölskyldur á öllum aldri. " FRÉTTABLAÐIÐ</li>
+    <li class="flex-item-2">" Skemmtilegir tónleikar sem kemur öllum í jólaskapið " MORGUNBLAÐIÐ</li>
 </ul>
 
-<article>texti hér</article>
-<article>texti hér</article>
-
-<footer class="footer">Footer</footer>
+<footer> [ <a href="https://www.harpa.is/">Harpan </a> - <a href="http://www.tskoli.is/">Tækniskólinn</a> ]</footer>
 </body>
 </html>
