--- a/verkefni 5/index_1.html
+++ b/verkefni 5/index_1.html
@@ -21,7 +21,7 @@
 <div class="minnititill">Sinfóníu Íslands</div>
 </div>
 <div class="dalkur">
-<div class="dalkur-1"><a href="#">Kaupa Miða</a></div>
+<div class="dalkur-1"><a href="form.html">Kaupa Miða</a></div>
 <div class="dalkur-1"><a href="#">Fleiri upplýsingar</a></div>
 </div>
 
